# data-lunch

./: .dockerignore  .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  app.yaml  changelog.md  makefile  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  setup_dev_env.sh  versions.json
.github/: dependabot.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: build_and_push.yml  bump_version.yaml  bump_version.yml  ci_cd.yaml  deploy_docs.yaml  main.yml  manual_build.yaml  release_new_version.yaml
data_lunch_app/: __init__.py  __main__.py  auth.py  cli.py  cloud.py  core.py  gui.py  models.py  quotes.xlsx  scheduled_tasks.py
data_lunch_app/conf/: config.yaml
data_lunch_app/templates/: error.html  (+4 more)
dlunch/: __init__.py  __main__.py  auth.py  cli.py  cloud.py  core.py  gui.py  models.py  scheduled_tasks.py
docker/: compose_init.sh  docker-compose-initiate.yaml  docker-compose.yaml  nginx.conf
docs/: conf.py  developers.md  getting_started.rst  index.md  index.rst
latest/: 404.html  index.html  objects.inv  sitemap.xml
notebooks/: CPU_Memory_time.ipynb
requirements/: ci-cd.yml  commitizen.yml  dev-requirements.txt  docs-requirements.txt  environment.yml  gc-sdk.yml  pre-commit.yml  requirements.txt
scripts/: create_users_from_list.py  send_email_with_ip.py
v3.3/: 404.html  index.html  objects.inv  sitemap.xml
v3.4/: 404.html  index.html  sitemap.xml
v3.5/: 404.html  index.html  objects.inv  sitemap.xml
v3.6/: 404.html  index.html  sitemap.xml
v3.7/: 404.html  index.html  objects.inv  sitemap.xml
(+121 files in other folders)
