[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data_lunch"
version = "1.17.0"
description = "The ultimate web app for a well organized lunch."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["python", "webapp", "lunch"]
license = {text = "Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies"]

[project.scripts]
data-lunch = "data_lunch_app.cli:main"

[tool.setuptools]
packages = ["data_lunch_app"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements/requirements.txt"]}

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.17.0"
version_files = [
    "data_lunch_app/__init__.py",
    "pyproject.toml:version",
]
tag_format = "v$version"
changelog_file = "changelog.md"
update_changelog_on_bump = true
annotated_tag = true
bump_message = "release $new_version (previous release $current_version)"